<resources>
    <string name="app_name">Class Manager</string>
    <!-- Strings related to login -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_class_manager">Your Class Manager</string>
    <string name="name">Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="sign_up_using_google">Sign Up Using Google</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="log_in_using_google_account">Log In using Google Account</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="log_out">Log Out</string>
    <string name="join_class">Join Class</string>
    <string name="set_alarm">Set Alarm</string>
</resources>