<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dull_white"
    tools:context=".ui.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivLoginBackground"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/your_class_manager"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvYourClassManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_class_manager"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/ivLoginBackground"
            app:layout_constraintEnd_toEndOf="@id/ivLoginBackground"
            app:layout_constraintStart_toStartOf="@id/ivLoginBackground"
            app:layout_constraintTop_toTopOf="@id/ivLoginBackground" />

        <EditText
            android:id="@+id/etEmailAddress"
            style="@style/style_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="4dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLoginBackground" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/style_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="4dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/etEmailAddress"
            app:layout_constraintStart_toStartOf="@id/etEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/etEmailAddress" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/log_in"
            android:layout_marginHorizontal="2dp"
            android:gravity="center"
            android:padding="@dimen/margin_scale2"
            android:textAllCaps="false"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintEnd_toEndOf="@id/etEmailAddress"
            app:layout_constraintStart_toStartOf="@id/etEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_size_normal"
            android:text="@string/forgot_your_password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btnLogIn"
            app:layout_constraintEnd_toEndOf="@id/btnLogIn"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn" />


        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/or"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/etEmailAddress"
            app:layout_constraintStart_toStartOf="@id/etEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />
<!--

        <ImageView
            android:id="@+id/ivGoogleIcon"
            android:layout_width="24dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="@id/tvSignUpUsingGoogle"
            app:layout_constraintEnd_toStartOf="@id/tvSignUpUsingGoogle"
            app:layout_constraintTop_toTopOf="@id/tvSignUpUsingGoogle" />
-->

        <TextView
            android:id="@+id/tvLogInUsingGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawablePadding="2dp"
            android:focusable="true"
            android:padding="4dp"
            android:text="@string/log_in_using_google_account"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/etEmailAddress"
            app:layout_constraintStart_toStartOf="@id/etEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvOr"
            app:drawableStartCompat="@drawable/ic_google" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="@id/etEmailAddress"
            app:layout_constraintStart_toStartOf="@id/etEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvLogInUsingGoogle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/tvGotoSignUpScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"

                    android:focusable="true"
                    android:padding="8dp"
                    android:text="@string/sign_up"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>